base: Add Tool search engines